--- a/package.json
+++ b/package.json
@@ -13,15 +13,26 @@
     "crypto-js": "^4.1.1",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
-    "ejs": "~2.6.1",
+    "ejs": "^2.6.2",
     "express": "~4.16.1",
+    "fs-extra": "^10.0.0",
+    "html-pdf": "^3.0.1",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.14",
+    "moment": "^2.29.1",
     "morgan": "~1.9.1",
-    "mysql": "^2.18.1"
+    "multer": "^1.4.3",
+    "mysql": "^2.18.1",
+    "rimraf": "^3.0.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13"
+    "@types/ejs": "^3.1.0",
+    "@types/express": "^4.17.13",
+    "@types/fs-extra": "^9.0.13",
+    "@types/html-pdf": "^2.2.1",
+    "@types/multer": "^1.4.7",
+    "@types/rimraf": "^3.0.2"
   }
 }
